Fix table row bg when overflowed

--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,9 @@ th {
     padding: 4px 1em;
     text-align: left;
 }
+tr {
+    background: #fafafa;
+}
 tr:nth-child(even) {
     background: #eee;
 }
